--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 #Required Vars
-BOT_TOKEN = ""
+BOT_TOKEN = "8472399372:AAGF4zjHxo1p3TLDKvt5ErX1RSvMlSy14o8"
 TELEGRAM_API = ""
 TELEGRAM_HASH = ""
 FSUB_ID = ""
