--- a/config.env
+++ b/config.env
@@ -2,8 +2,8 @@
 BOT_TOKEN = "8472399372:AAGF4zjHxo1p3TLDKvt5ErX1RSvMlSy14o8"
 TELEGRAM_API = "27747092"
 TELEGRAM_HASH = "184dbff3d11d10cb726cbde4a28ca8a0"
-FSUB_ID = ""
-DUMP_CHAT_ID = ""
+FSUB_ID = "-1002368711619"
+DUMP_CHAT_ID = "-1003266052828"
 
 #Optional
 USER_SESSION_STRING = ""
